chore: fix styling to make text more readable

--- a/src/App.scss
+++ b/src/App.scss
@@ -155,6 +155,7 @@ h3 {
 
 .story h3 {
   font-family: "Raleway", sans-serif;
+  text-shadow: #000 2px 2px 2px;
 }
 
 .lost {
